refactor: Place, Member 엔티티 리팩토링